--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
         <mat-tab label="Beginners">
 
             <courses-card-list
-                    [courses]="[]">
+                    [courses]="begginerCourses$ | async">
 
             </courses-card-list>
 
@@ -17,14 +17,11 @@
         <mat-tab label="Advanced">
 
             <courses-card-list
-                    [courses]="[]"
-
-            ></courses-card-list>
+                    [courses]="advancedCourses$ | async"></courses-card-list>
 
         </mat-tab>
 
     </mat-tab-group>
-
 
 
 </div>
